--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,6 @@
 API_URL = /api/v1
 secret = my-dog-is-nice
-CONNECTION_STRING = mongodb+srv://eshopuser:eshopadmin@eshop1.f4jlobv.mongodb.net/?retryWrites=true&w=majority&appName=eshop1
-
+CONNECTION_STRING = 
 
 
 
